[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Bad_Guys/Parts/BG-25/BG-25-Turret-Wall.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Map_Parts/parts/MP-00-part-00-32x32_Door.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Bad_Guys/Parts/BG-25-Camera_Activation-Part.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Bad_Guys/BG-25-Turret-Wall-Back.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1280, 800 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bg-25-Turret-Wall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Bg-25-Turret-Wall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath("Mp-00-part-00-32X32Door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg-25-Turret-Wall:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Mp-00-part-00-32X32Door:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg-25-Turret-Wall:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 14.0

[node name="BG-25-Turret-Wall-Back" type="StaticBody2D" groups=["activate", "badguy", "hittable"]]
collision_layer = 2048
collision_mask = 133634
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="AnimationPlayer_Gun" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/Shoot = SubResource( 3 )

[node name="AnimationPlayer_Door" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 4 )
anims/RESET = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Mp-00-part-00-32X32Door" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2

[node name="Bg-25-Turret-Wall" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
offset = Vector2( 16, 0 )
hframes = 2
vframes = 2

[node name="RayCast2D" type="RayCast2D" parent="Bg-25-Turret-Wall"]
enabled = true
cast_to = Vector2( 800, 0 )
collision_mask = 2

[node name="Timer_Camera_Activation" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D_cameraa_activation" type="Area2D" parent="." groups=["trigger"]]
collision_layer = 4096
collision_mask = 4096
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_cameraa_activation" groups=["trigger"]]
shape = SubResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Camera_Activation" to="." method="_on_Timer_Camera_Activation_timeout"]
